# cppgres

./: .gitignore  CMakeLists.txt  cppgres.cpp  cppgres.h  test.sh
cppgres/: datum.h  error.h  exception.h  executor.h  function.h  guard.h  imports.h  memory.h  type.h  types.h
cppgres/utils/: expected.h  function_traits.h  utils.h
tests/: tests.cpp
